--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
 <!doctype html>
 <div></div>
+<script src="js/polyfill.js"></script>
 <script src="js/require.js" data-main="js/main.js" defer></script>
