--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,3 @@
 <!doctype html>
 <div></div>
-<script src="js/require.js" data-main="js/main.js" defer></script>
+<script src="require.js" data-main="main.js" defer></script>
