--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,6 @@
 <!doctype html>
+<head>
+  <link rel="stylesheet" href="normalize.css"></link>
+</head>
 <div></div>
 <script src="require.js" data-main="main.js" defer></script>
