--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <head>
   <link rel="stylesheet" href="normalize.css"></link>
+  <style>
+    .view {
+      transition: opacity 1s linear;
+      opacity: 1;
+    }
+    .invisible {
+      opacity: 0;
+    }
+  </style>
 </head>
-<div></div>
+<div id="viewContainer">
+</div>
 <script src="require.js" data-main="main.js" defer></script>
