--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <link rel="stylesheet" href="normalize.css"></link>
+  <link rel="stylesheet" href="/normalize.css"></link>
   <style>
     .view {
       transition: opacity 1s linear;
@@ -13,4 +13,4 @@
 </head>
 <div id="viewContainer">
 </div>
-<script src="require.js" data-main="main.js" defer></script>
+<script src="/require.js" data-main="/main.js" defer></script>
