--- a/app/index.html
+++ b/app/index.html
@@ -17,48 +17,54 @@
       width: 100vw;
       height: 100vh;
     }
+    #viewContainer {
+      min-height: 100%;
+      background-color: #CCC;
+      padding-top: 70px;
+    }
     .headerbar {
-      display: flex;
       position: fixed;
+      top: 0;
       width: 100%;
       height: 50px;
+    }
+    .headerbar__container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
       box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
       z-index: 1;
       background-color: white;
       align-items: center;
       padding: 0 10px;
     }
-    #viewContainer {
-      min-height: 100%;
-      background-color: #CCC;
-      padding-top: 60px;
-    }
-    .headerbar__title, .headerbar__search {
-      display: flex;
-      align-items: center;
-      flex-grow: 1;
-      flex-shrink: 1;
-      will-change: transform;
-      transform-origin: 0% 50%;
-      transition: transform 0.3s ease-in-out;
+    .headerbar--uninitialized .headerbar__container > *,
+    .headerbar--uninitialized .headerbar__drawer {
+      display: none;
     }
     .button {
       margin: 5px;
     }
   </style>
 </head>
-<header class="headerbar">
-  <a class="headerbar__back button fa fa-arrow-left"></a>
-  <span class="headerbar__title">
-    Pweddit 💙
-  </span>
-  <form style="display: none" class="headerbar__search">
-    <input>
-    <a class="button headerbar__search__close fa fa-times"></a>
-    <a class="button headerbar__search__go fa fa-arrow-right"></a>
-  </form>
-  <a class="headerbar__refresh button fa fa-refresh"></a>
-</header>
 <div id="viewContainer">
 </div>
+<header class="headerbar headerbar--uninitialized">
+  <aside class="headerbar__drawer">
+    <span class="headerbar__drawer__icon fa fa-caret-down"></span>
+  </aside>
+  <div class="headerbar__container">
+    <a class="headerbar__back button fa fa-arrow-left"></a>
+    <span class="headerbar__title">
+      Pweddit 💙
+    </span>
+    <form style="display: none" class="headerbar__search">
+      <input>
+      <a class="button headerbar__search__close fa fa-times"></a>
+      <a class="button headerbar__search__go fa fa-arrow-right"></a>
+    </form>
+    <a class="headerbar__refresh button fa fa-refresh"></a>
+  </div>
+</header>
 <script src="/require.js" data-main="/main.js" defer></script>
