--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
       min-height: 100%;
       background-color: #CCC;
       padding-top: 70px;
+      padding-bottom: 35px;
     }
     .headerbar {
       position: fixed;
