Add close button to LinkViewer

--- a/app/index.html
+++ b/app/index.html
@@ -75,8 +75,13 @@
   </div>
 </header>
 <div class="linkviewer linkviewer--hidden">
+  <a class="linkviewer__close button fa fa-times"></a>
   <a class="linkviewer__backward button fa fa-chevron-left"></a>
   <div class="linkviewer__container"></div>
   <a class="linkviewer__forward button fa fa-chevron-right"></a>
+  <footer class="linkviewer__details">
+    <div class="linkviewer__details__count"></div>
+    <div class="linkviewer__details__text"></div>
+  </footer>
 </div>
 <script src="/require.js" data-main="/main.js" defer></script>
