Add deployment task

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
   <link rel="stylesheet" href="/normalize.css"></link>
   <link rel="stylesheet" href="/fa/css/font-awesome.min.css"></link>
+  <link rel="manifest" href="/manifest.json"></link>
   <noscript class="lazyload">
     <link rel="stylesheet" href="/modules/HeaderBar.css"></link>
     <link rel="stylesheet" href="/modules/View.css"></link>
