--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      right: 0;
+      width: 100vw;
       height: 50px;
     }
     .headerbar__container {
