Make LinkViewer a view with a route

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <noscript class="lazyload">
     <link rel="stylesheet" href="/modules/HeaderBar.css"></link>
     <link rel="stylesheet" href="/modules/View.css"></link>
-    <link rel="stylesheet" href="/modules/LinkViewer.css"></link>
+    <link rel="stylesheet" href="/views/LinkView.css"></link>
     <link rel="stylesheet" href="/views/SubredditViewItem.css"></link>
     <link rel="stylesheet" href="/views/ThreadView.css"></link>
   </noscript>
