Transition to SystemJS

--- a/app/index.html
+++ b/app/index.html
@@ -82,4 +82,4 @@
   </footer>
   <a class="linkviewer__close button fa fa-times"></a>
 </div>
-<script src="/require.js" data-main="/main.js" defer></script>
+<script src="/bootstrap.es5.js"></script>
