Prioritize loading of assets

--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,6 @@
   <link rel="stylesheet" href="/normalize.css"></link>
   <link rel="stylesheet" href="/fa/css/font-awesome.min.css"></link>
   <link rel="manifest" href="/manifest.json"></link>
-  <noscript class="lazyload">
-    <link rel="stylesheet" href="/modules/HeaderBar.css"></link>
-    <link rel="stylesheet" href="/modules/View.css"></link>
-    <link rel="stylesheet" href="/views/LinkView.css"></link>
-    <link rel="stylesheet" href="/views/SubredditViewItem.css"></link>
-    <link rel="stylesheet" href="/views/ThreadView.css"></link>
-  </noscript>
   <style>
     * {
       box-sizing: border-box;
@@ -48,7 +41,7 @@
       display: none;
     }
     .linkviewer--hidden {
-      display: none;
+      display: none !important;
     }
     .button {
       padding: 10px;
