Style notification area in drawer

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
 </head>
 <header class="headerbar headerbar--uninitialized">
   <aside class="headerbar__drawer">
+    <div class="headerbar__drawer__controls"></div>
+    <div class="headerbar__drawer__notifications"></div>
     <span class="headerbar__drawer__icon"></span>
   </aside>
   <div class="headerbar__container">
