Reorder items in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
       left: 0;
       width: 100vw;
       height: 50px;
+      z-index: 1000;
     }
     .headerbar__container {
       position: absolute;
