Make drawer controls inert when contracted

--- a/app/index.html
+++ b/app/index.html
@@ -54,11 +54,6 @@
   </style>
 </head>
 <header class="headerbar headerbar--uninitialized">
-  <aside class="headerbar__drawer">
-    <div class="headerbar__drawer__controls"></div>
-    <div class="headerbar__drawer__notifications"></div>
-    <span class="headerbar__drawer__icon"></span>
-  </aside>
   <div class="headerbar__container">
     <button class="headerbar__back button"></button>
     <button class="headerbar__title">
@@ -71,6 +66,11 @@
     <button class="headerbar__share button"></button>
     <button class="headerbar__refresh button"></button>
   </div>
+  <aside class="headerbar__drawer">
+    <div class="headerbar__drawer__controls"></div>
+    <div class="headerbar__drawer__notifications"></div>
+    <button class="headerbar__drawer__icon"></button>
+  </aside>
 </header>
 <div class="linkviewer linkviewer--hidden">
   <button class="linkviewer__backward button fa fa-chevron-left"></button>
