--- a/test/index.html
+++ b/test/index.html
@@ -23,12 +23,15 @@ System.config({
 </script>
 <script src="/node_modules/mocha/mocha.js"></script>
 <script src="/node_modules/chai/chai.js"></script>
+<script src="/test/TestUtils.js"></script>
 <script>
   mocha.setup('bdd');
   expect = chai.expect;
 </script>
 
 <script src="/test/modules/Downloader.js"></script>
+<script src="/test/modules/Utils.js"></script>
+<script src="/test/modules/PwedditStore.js"></script>
 
 <script>
   mocha.run();
