Weird transition bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   body {
     display: flex;
     flex-direction: column;
-    
+
   }
   header {
     display: block;
@@ -26,9 +26,5 @@
     background-color: white;
   }
 </style>
-<header>
-  Pweddit
-</header>
-<stack-view>
-</stack-view>
+<main></main>
 <script type="module" src="main.js"></script>
