--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.24);
     z-index: 99;
   }
-  stack-view {
+  body > :first-child {
     flex-grow: 1;
   }
-  stack-view > section {
-    background-color: white;
+  side-nav {
+    position: relative;
+  }
+  stack-view {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 </style>
 <script type="module" src="main.js"></script>
