Make it work with Webpack

--- a/src/index.html
+++ b/src/index.html
@@ -25,4 +25,5 @@
     flex-grow: 1;
   }
 </style>
-<script type="module" src="main.js"></script>
+<script defer src="./comlink.js"></script>
+<script defer src="./main.js"></script>
