--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     flex-grow: 1;
   }
 </style>
-<script defer src="./comlink.js"></script>
+<script defer src="./clooney/clooney.js"></script>
 <script defer src="./main.js"></script>
 <body><!-- stuff --></body>
 
