Fix CE infrastructure

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,6 @@
   }
 </style>
 <script defer src="./clooney/clooney.js"></script>
-<script defer src="./main.js"></script>
+<script type="module" src="./main.js"></script>
 <body><!-- stuff --></body>
 
